Changed structure to use jekyll layouts

--- a/index.html
+++ b/index.html
@@ -1,43 +1,21 @@
 ---
+layout: default
+title: "Prof. Pedro Volpi"
 ---
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prof. Pedro Volpi</title>
 
-    <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-M7JPSF8G');</script>
-    <!-- End Google Tag Manager -->
-</head>
+<h1>Prof. Pedro Volpi</h1>
 
-<body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M7JPSF8G"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+<h3>Resumos disponíveis</h3>
+<ul>
+    <li><strong>Matemática Financeira</strong> - <a href="{{ '/assets/pdfs/mat-fin.pdf' | relative_url }}" download>Download PDF</a></li>
+    <li><strong>Análise Combinatória</strong> - <a href="{{ '/assets/pdfs/combinatoria.pdf' | relative_url }}" download>Download PDF</a></li>
+</ul>
 
-    <h1>Prof. Pedro Volpi</h1>
-    
-    <h3>Resumos disponíveis</h3>
-    <ul>
-        <li><strong>Matemática Financeira</strong> - <a href="/assets/pdfs/mat-fin.pdf" download>Download PDF</a></li>
-        <li><strong>Análise Combinatória</strong> - <a href="/assets/pdfs/combinatoria.pdf" download>Download PDF</a></li>
-    </ul>
-
-    <h3>Em breve</h3>
-    <ul>
-        <li><strong>Matemática Básica</strong></li>
-        <li><strong>Geometria Plana</strong></li>
-        <li><strong>Geometria Espacial</strong></li>
-        <li><strong>Geometria Analítica</strong></li>
-        <li><strong>Matrizes</strong></li>
-    </ul>
-</body>
-</html>
+<h3>Em breve</h3>
+<ul>
+    <li><strong>Matemática Básica</strong></li>
+    <li><strong>Geometria Plana</strong></li>
+    <li><strong>Geometria Espacial</strong></li>
+    <li><strong>Geometria Analítica</strong></li>
+    <li><strong>Matrizes</strong></li>
+</ul>
