--- a/index.html
+++ b/index.html
@@ -5,17 +5,33 @@ title: "Prof. Pedro Volpi"
 
 <h1>Prof. Pedro Volpi</h1>
 
-<h3>Resumos disponíveis</h3>
-<ul>
-    <li><strong>Matemática Financeira</strong> - <a href="{{ '/assets/pdfs/mat-fin.pdf' | relative_url }}" download>Download PDF</a></li>
-    <li><strong>Análise Combinatória</strong> - <a href="{{ '/assets/pdfs/combinatoria.pdf' | relative_url }}" download>Download PDF</a></li>
-</ul>
+<h2>Resumos disponíveis</h2>
+<div class="summaries">
+  <div class="card">
+    <h3>Matemática Financeira</h3>
+    <p><a href="{{ '/assets/pdfs/mat-fin.pdf' | relative_url }}" download>Download PDF</a></p>
+  </div>
+  <div class="card">
+    <h3>Análise Combinatória</h3>
+    <p><a href="{{ '/assets/pdfs/combinatoria.pdf' | relative_url }}" download>Download PDF</a></p>
+  </div>
+</div>
 
-<h3>Em breve</h3>
-<ul>
-    <li><strong>Matemática Básica</strong></li>
-    <li><strong>Geometria Plana</strong></li>
-    <li><strong>Geometria Espacial</strong></li>
-    <li><strong>Geometria Analítica</strong></li>
-    <li><strong>Matrizes</strong></li>
-</ul>
+<h2>Em breve</h2>
+<div class="summaries">
+  <div class="card">
+    <h3>Matemática Básica</h3>
+  </div>
+  <div class="card">
+    <h3>Geometria Plana</h3>
+  </div>
+  <div class="card">
+    <h3>Geometria Espacial</h3>
+  </div>
+  <div class="card">
+    <h3>Geometria Analítica</h3>
+  </div>
+  <div class="card">
+    <h3>Matrizes</h3>
+  </div>
+</div>
