Changed card content styles

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@ title: "Prof. Pedro Volpi"
 
 <h2>Resumos disponíveis</h2>
 <div class="summaries">
-  <div class="card">
-    <h3>Matemática Financeira</h3>
-    <p><a href="{{ '/assets/pdfs/mat-fin.pdf' | relative_url }}" download>Download PDF</a></p>
-  </div>
-  <div class="card">
-    <h3>Análise Combinatória</h3>
-    <p><a href="{{ '/assets/pdfs/combinatoria.pdf' | relative_url }}" download>Download PDF</a></p>
-  </div>
+    <div class="card">
+      <div class="card-content">
+        <h3>Matemática Financeira</h3>
+        <a href="{{ '/assets/pdfs/mat-fin.pdf' | relative_url }}" download>Download PDF</a>
+      </div>
+    </div>
+  
+    <div class="card">
+      <div class="card-content">
+        <h3>Matemática Financeira</h3>
+        <a href="{{ '/assets/pdfs/combinatoria.pdf' | relative_url }}" download>Download PDF</a>
+      </div>
+    </div>
 </div>
 
 <h2>Em breve</h2>
