Revamped the layout

--- a/index.html
+++ b/index.html
@@ -3,40 +3,55 @@ layout: default
 title: "Prof. Pedro Volpi"
 ---
 
-<h1>Prof. Pedro Volpi</h1>
+<div class="container">
+  <header>
+    <h1>Prof. Pedro Volpi</h1>
+    <p class="catchphrase">Matemática para vestibulares</p>
+  </header>
 
-<h2>Resumos disponíveis</h2>
-<div class="summaries">
-    <div class="card">
-      <div class="card-content">
-        <h3>Matemática Financeira</h3>
-        <a href="{{ '/assets/pdfs/mat-fin.pdf' | relative_url }}" download>Download PDF</a>
+  <section class="available-summaries">
+    <h2>Resumos Disponíveis</h2>
+    <div class="summaries">
+      <div class="card">
+        <div class="card-content">
+          <h3>Matemática Financeira</h3>
+          <a href="{{ '/assets/pdfs/mat-fin.pdf' | relative_url }}" download>Baixar</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-content">
+          <h3>Análise Combinatória</h3>
+          <a href="{{ '/assets/pdfs/combinatoria.pdf' | relative_url }}" download>Baixar</a>
+        </div>
       </div>
     </div>
-  
-    <div class="card">
-      <div class="card-content">
-        <h3>Análise Combinatória</h3>
-        <a href="{{ '/assets/pdfs/combinatoria.pdf' | relative_url }}" download>Download PDF</a>
+  </section>
+
+  <section class="coming-soon">
+    <h2>Em Breve</h2>
+    <div class="summaries">
+      <div class="card coming-soon-card">
+        <h3>Matemática Básica</h3>
+      </div>
+      <div class="card coming-soon-card">
+        <h3>Geometria Plana</h3>
+      </div>
+      <div class="card coming-soon-card">
+        <h3>Geometria Espacial</h3>
+      </div>
+      <div class="card coming-soon-card">
+        <h3>Geometria Analítica</h3>
+      </div>
+      <div class="card coming-soon-card">
+        <h3>Matrizes</h3>
+      </div>
+      <div class="card coming-soon-card">
+        <h3>Probabilidade</h3>
+      </div>
+      <div class="card coming-soon-card">
+        <h3>Estatística</h3>
       </div>
     </div>
-</div>
-
-<h2>Em breve</h2>
-<div class="summaries">
-  <div class="card">
-    <h3>Matemática Básica</h3>
-  </div>
-  <div class="card">
-    <h3>Geometria Plana</h3>
-  </div>
-  <div class="card">
-    <h3>Geometria Espacial</h3>
-  </div>
-  <div class="card">
-    <h3>Geometria Analítica</h3>
-  </div>
-  <div class="card">
-    <h3>Matrizes</h3>
-  </div>
+  </section>
 </div>
