Changed layout around

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: "Prof. Pedro Volpi"
+title: "Resumos"
 ---
 
 <div class="container">
   <header>
-    <h1>Prof. Pedro Volpi</h1>
-    <p class="catchphrase">Matemática para vestibulares</p>
+    <h1>Pedro Volpi</h1>
+    <p class="catchphrase">Professor de Matemática para vestibulares</p>
   </header>
 
   <section class="available-summaries">
