Major updates in design and content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: "Resumos"
 <div class="container">
   <header>
     <h1>Pedro Volpi</h1>
-    <p class="catchphrase">Professor de Matemática para vestibulares</p>
+    <p class="catchphrase">Matemática para Vestibulares</p>
   </header>
 
   <section class="available-summaries">
