--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@ title: "Resumos"
   <section class="available-summaries">
     <h2>Resumos Disponíveis</h2>
     <div class="summaries">
-      <div class="card">
+      <div class="card" style="--card-hover-color:rgba(0,128,0,0.8)">
         <div class="card-content">
           <h3>Matemática Financeira</h3>
           <a href="{{ '/assets/pdfs/mat-fin.pdf' | relative_url }}" download>Baixar</a>
         </div>
       </div>
 
-      <div class="card">
+      <div class="card" style="--card-hover-color:rgba(244,196,48,0.8)">
         <div class="card-content">
           <h3>Análise Combinatória</h3>
           <a href="{{ '/assets/pdfs/combinatoria.pdf' | relative_url }}" download>Baixar</a>
