Ajeitando a seção de qualificações

--- a/about.html
+++ b/about.html
@@ -28,13 +28,21 @@ Atualmente, exerço o cargo de Auditor Federal de Controle Externo no Tribunal d
 
 <!-- Seções Adicionais (Opcional) -->
 <section class="available-summaries">
-<h2>Qualificações</h2>
-<div class="summaries">
-<h3>Formação Acadêmica</h3>
-<p>Engenharia de Computação pela UFRJ</p>
-<h3>Aprovações</h3>
-<p>1º Lugar - Ministério da Economia (Controle Interno)</p>
-<p>1º Lugar - Tribunal de Contas do Estado do Amazonas (Auditor de Controle Externo)</p>
-<p>37º Lugar - Tribunal de Contas da União (Auditor Federal de Controle Externo)</p>
-</div>
+  <h2>Qualificações</h2>
+  <div class="summaries">
+    <div class="summary">
+      <h3>Aprovações</h3>
+      <ul>
+        <li>1º Lugar – Ministério da Economia (Controle Interno)</li>
+        <li>1º Lugar – Tribunal de Contas do Estado do Amazonas (Auditor de Controle Externo)</li>
+        <li>37º Lugar – Tribunal de Contas da União (Auditor Federal de Controle Externo)</li>
+      </ul>
+    </div>
+    <div class="summary">
+      <h3>Formação Acadêmica</h3>
+      <ul>
+        <li>Engenharia de Computação pela UFRJ</li>
+      </ul>
+    </div>
+  </div>
 </section>
