--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: "Resumos"
 
 <div class="container">
   <header>
-    <h1>Pedro Volpi</h1>
+    <h1>Prof. Pedro Volpi</h1>
     <p class="catchphrase">Matemática para Vestibulares</p>
   </header>
 
